--- a/about.html
+++ b/about.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <header>
+      <!-- Título de la página actual-->
       <h1>Sobre mí</h1>
+
+      <!-- Barra de navegación -->
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
@@ -19,13 +22,47 @@
       </nav>
     </header>
 
+    <!-- Sección principal -->
     <section>
       <h2>Mi historia</h2>
       <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident ipsam totam ducimus distinctio molestias illum, iusto aliquam tempore. Quidem officia consequuntur facere neque aperiam a nesciunt, minus dolore accusantium excepturi sequi libero sed nam eius aut. Facilis voluptatem nostrum blanditiis, aut possimus nemo iure iste eos harum saepe repudiandae dicta numquam doloremque perferendis amet, sunt id maxime iusto laudantium dolores, fuga fugiat consectetur similique deserunt. Iure, eos provident vitae voluptatem laudantium beatae pariatur necessitatibus eaque eveniet ab repellendus possimus praesentium illo recusandae hic obcaecati placeat soluta in ducimus quaerat nisi fuga quod illum. Sed nulla pariatur fugit ullam doloremque ducimus atque numquam veniam quas a, aut placeat dicta molestiae vitae beatae dolores, quam delectus magnam sunt sint illo corporis officiis distinctio consectetur. Ratione autem rerum culpa ex odio eum delectus aliquam qui aperiam? Accusamus maiores dicta repellendus, dignissimos deleniti animi suscipit vel, aliquid ipsa ipsum corporis excepturi recusandae ut neque culpa. Fugit doloremque libero alias quam iure tempora maiores totam nostrum maxime cumque? Numquam, a dolor, amet temporibus quisquam obcaecati ea, tenetur modi nam perferendis recusandae optio. Modi temporibus quos illum. Amet veniam, sunt dolorum aperiam vel animi, similique esse odio consequatur quae numquam facere dolores quam at, iste dolorem? Nisi error expedita necessitatibus, eum in illo cupiditate molestiae quae. Praesentium quae quaerat at ab, sit mollitia cupiditate quas molestias quidem, impedit nisi obcaecati sunt odio sed labore libero eos, nostrum perferendis exercitationem? Molestias neque rerum ipsam dolor architecto! Sapiente magnam neque commodi veritatis dolore, repellat laborum, incidunt tenetur est eos temporibus rem aliquam. Blanditiis, expedita quae. Quidem quia, temporibus facere id dignissimos porro ab inventore voluptatem. Eveniet ullam repellat officia. Laboriosam ipsum sunt repellat explicabo aperiam, hic voluptatem eveniet doloribus commodi, fugit quos rerum, nihil distinctio quod et repudiandae expedita. Ad incidunt ullam laudantium! Reprehenderit ab hic quasi labore.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident
+        ipsam totam ducimus distinctio molestias illum, iusto aliquam tempore.
+        Quidem officia consequuntur facere neque aperiam a nesciunt, minus
+        dolore accusantium excepturi sequi libero sed nam eius aut. Facilis
+        voluptatem nostrum blanditiis, aut possimus nemo iure iste eos harum
+        saepe repudiandae dicta numquam doloremque perferendis amet, sunt id
+        maxime iusto laudantium dolores, fuga fugiat consectetur similique
+        deserunt. Iure, eos provident vitae voluptatem laudantium beatae
+        pariatur necessitatibus eaque eveniet ab repellendus possimus
+        praesentium illo recusandae hic obcaecati placeat soluta in ducimus
+        quaerat nisi fuga quod illum. Sed nulla pariatur fugit ullam doloremque
+        ducimus atque numquam veniam quas a, aut placeat dicta molestiae vitae
+        beatae dolores, quam delectus magnam sunt sint illo corporis officiis
+        distinctio consectetur. Ratione autem rerum culpa ex odio eum delectus
+        aliquam qui aperiam? Accusamus maiores dicta repellendus, dignissimos
+        deleniti animi suscipit vel, aliquid ipsa ipsum corporis excepturi
+        recusandae ut neque culpa. Fugit doloremque libero alias quam iure
+        tempora maiores totam nostrum maxime cumque? Numquam, a dolor, amet
+        temporibus quisquam obcaecati ea, tenetur modi nam perferendis
+        recusandae optio. Modi temporibus quos illum. Amet veniam, sunt dolorum
+        aperiam vel animi, similique esse odio consequatur quae numquam facere
+        dolores quam at, iste dolorem? Nisi error expedita necessitatibus, eum
+        in illo cupiditate molestiae quae. Praesentium quae quaerat at ab, sit
+        mollitia cupiditate quas molestias quidem, impedit nisi obcaecati sunt
+        odio sed labore libero eos, nostrum perferendis exercitationem?
+        Molestias neque rerum ipsam dolor architecto! Sapiente magnam neque
+        commodi veritatis dolore, repellat laborum, incidunt tenetur est eos
+        temporibus rem aliquam. Blanditiis, expedita quae. Quidem quia,
+        temporibus facere id dignissimos porro ab inventore voluptatem. Eveniet
+        ullam repellat officia. Laboriosam ipsum sunt repellat explicabo
+        aperiam, hic voluptatem eveniet doloribus commodi, fugit quos rerum,
+        nihil distinctio quod et repudiandae expedita. Ad incidunt ullam
+        laudantium! Reprehenderit ab hic quasi labore.
       </p>
     </section>
 
+    <!-- El footer con los derechos reservados -->
     <footer>
       <p>&copy; 2024 El blog de Sergio Dacal Rodríguez</p>
     </footer>
