--- a/agradecimiento.html
+++ b/agradecimiento.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <header>
+      <!-- Título de la página actual-->
       <h1>¡Gracias por cubrir el formulario!</h1>
+
+      <!-- Barra de navegación -->
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
@@ -19,6 +22,7 @@
       </nav>
     </header>
 
+    <!-- Sección principal -->
     <section>
       <h2>Tu mensaje ha sido enviado con éxito.</h2>
       <p>
@@ -27,6 +31,7 @@
       </p>
     </section>
 
+    <!-- El footer con los derechos reservados -->
     <footer>
       <p>&copy; 2024 El blog de Sergio Dacal Rodríguez</p>
     </footer>
