--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <header>
+      <!-- Título de la página actual-->
       <h1>Contacta conmigo</h1>
+
+      <!-- Barra de navegación -->
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
@@ -19,6 +22,7 @@
       </nav>
     </header>
 
+    <!-- Sección principal -->
     <section>
       <h2>Información de Contacto</h2>
       <p>
@@ -28,6 +32,7 @@
       <p>Teléfono: +34 123456789</p>
     </section>
 
+    <!-- El footer con los derechos reservados -->
     <footer>
       <p>&copy; 2024 El blog de Sergio Dacal Rodríguez</p>
     </footer>
