--- a/formulario.html
+++ b/formulario.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <header>
+      <!-- Título de la página actual-->
       <h1>Buzón de sugerencias</h1>
+
+      <!-- Barra de navegación -->
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
@@ -19,11 +22,14 @@
       </nav>
     </header>
 
+    <!-- Sección principal -->
     <section>
       <h3>
         Puedes enviar sugerencias para mejorar la página rellenando este
         formulario
       </h3>
+
+      <!-- Formulario de sugerencias -->
       <form action="agradecimiento.html" method="get">
         <label for="nombre">Nombre:</label><br />
         <input type="text" id="nombre" name="nombre" /><br />
@@ -35,6 +41,7 @@
       </form>
     </section>
 
+    <!-- El footer con los derechos reservados -->
     <footer>
       <p>&copy; 2024 El blog de Sergio Dacal Rodríguez</p>
     </footer>
