completar sección about

--- a/about.html
+++ b/about.html
@@ -26,39 +26,34 @@
     <section>
       <h2>Mi historia</h2>
       <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident
-        ipsam totam ducimus distinctio molestias illum, iusto aliquam tempore.
-        Quidem officia consequuntur facere neque aperiam a nesciunt, minus
-        dolore accusantium excepturi sequi libero sed nam eius aut. Facilis
-        voluptatem nostrum blanditiis, aut possimus nemo iure iste eos harum
-        saepe repudiandae dicta numquam doloremque perferendis amet, sunt id
-        maxime iusto laudantium dolores, fuga fugiat consectetur similique
-        deserunt. Iure, eos provident vitae voluptatem laudantium beatae
-        pariatur necessitatibus eaque eveniet ab repellendus possimus
-        praesentium illo recusandae hic obcaecati placeat soluta in ducimus
-        quaerat nisi fuga quod illum. Sed nulla pariatur fugit ullam doloremque
-        ducimus atque numquam veniam quas a, aut placeat dicta molestiae vitae
-        beatae dolores, quam delectus magnam sunt sint illo corporis officiis
-        distinctio consectetur. Ratione autem rerum culpa ex odio eum delectus
-        aliquam qui aperiam? Accusamus maiores dicta repellendus, dignissimos
-        deleniti animi suscipit vel, aliquid ipsa ipsum corporis excepturi
-        recusandae ut neque culpa. Fugit doloremque libero alias quam iure
-        tempora maiores totam nostrum maxime cumque? Numquam, a dolor, amet
-        temporibus quisquam obcaecati ea, tenetur modi nam perferendis
-        recusandae optio. Modi temporibus quos illum. Amet veniam, sunt dolorum
-        aperiam vel animi, similique esse odio consequatur quae numquam facere
-        dolores quam at, iste dolorem? Nisi error expedita necessitatibus, eum
-        in illo cupiditate molestiae quae. Praesentium quae quaerat at ab, sit
-        mollitia cupiditate quas molestias quidem, impedit nisi obcaecati sunt
-        odio sed labore libero eos, nostrum perferendis exercitationem?
-        Molestias neque rerum ipsam dolor architecto! Sapiente magnam neque
-        commodi veritatis dolore, repellat laborum, incidunt tenetur est eos
-        temporibus rem aliquam. Blanditiis, expedita quae. Quidem quia,
-        temporibus facere id dignissimos porro ab inventore voluptatem. Eveniet
-        ullam repellat officia. Laboriosam ipsum sunt repellat explicabo
-        aperiam, hic voluptatem eveniet doloribus commodi, fugit quos rerum,
-        nihil distinctio quod et repudiandae expedita. Ad incidunt ullam
-        laudantium! Reprehenderit ab hic quasi labore.
+        Mi nombre es Sergio Dacal Rodríguez, soy de Santiago de Compostela, Galicia.
+      </p>
+      <p>
+        He estudiado Ingeniería Informática, los dos primeros cursos en la Universidad de Santiago de Compostela,
+        aunque recientemente me he movido a Madrid para cursar los dos últimos años en la universidad Alfonso X El Sabio
+        en el campus de Villanueva de la Cañada.
+      </p>
+      <p>
+        Desde pequeño siempre me ha gustado mucho la tecnología abierta y el movimiento Maker, tuve la suerte con 16 años de
+        poder empezar a trabajar en una empresa de formación tecnológica en Santiago, llamada Vermislab (podeis ver su web <a href="https://www.vermislab.com/">aquí</a>).
+        En el primer año estuve asistiendo a los profesores en las clases (mayormente orientadas a niños y adolescentes) y fui cogiendo
+        experiencia como profesor. En el siguiente año, ya pasé a impartir mis propias clases, y además empecé a desarrollar e impartir junto
+        con otros compañeros algunos cursos o bootcamps de programación (la mayoría con Python y orientados a Machine Learning e Inteligencia Artificial).
+      </p>
+      <p>
+        Con 18 años, decidí trasladarme a otro sector de la compañía, más alejado de la docencia y enfocado en el desarrollo e innovación de producto.
+        Pasé a formar parte del equipo de I+D, departamente en el que trabajábamos para desarrollar prototipos funcionales de tecnologías que luego se usarían
+        en los cursos y bootcamps para apoyar la docencia. Estuve 2 años más en este puesto, hasta que terminé 2º curso de la carrera y me tuve que mover a Madrid.
+      </p>
+      <p>
+        Actualmente estoy cursando 3º de Ingeniería Informática en UAX, y simultáneamente a los estudios, estoy trabajando como Frontend Developer en Telefónica,
+        en concreto en el departamento de CDO, en un proyecto de desarrollo de Living Apps, estas son las apps que corrent en las Smart TVs de Movistar
+        (como Netflix, Youtube, Ikea, Amazon...), en concreto en la parte visual de estas aplicaciones (usando tecnologías como React o PixiJS (una librería de Javascript
+        que implementa la API de WebGL para navegadores).
+      </p>
+      <p>
+        Para más información en el mundo laboral puedes consultar mi <a href="https://www.linkedin.com/in/sergio-dacal-rodriguez/">Linkedin</a>
+        O si prefieres cotillear sobre mis aficciones por la escalada y el kitesurf también puedes echar un ojo a mi perfil de <a href="https://www.instagram.com/dacalite/">Instagram</a>
       </p>
     </section>
 
