corregir formato página about

--- a/about.html
+++ b/about.html
@@ -43,16 +43,18 @@
       <p>
         Con 18 años, decidí trasladarme a otro sector de la compañía, más alejado de la docencia y enfocado en el desarrollo e innovación de producto.
         Pasé a formar parte del equipo de I+D, departamente en el que trabajábamos para desarrollar prototipos funcionales de tecnologías que luego se usarían
-        en los cursos y bootcamps para apoyar la docencia. Estuve 2 años más en este puesto, hasta que terminé 2º curso de la carrera y me tuve que mover a Madrid.
+        en los cursos y bootcamps para apoyar la docencia. Estuve 2 años más en este puesto, hasta que terminé el 2º curso de la carrera y decidí moverme a Madrid.
       </p>
       <p>
         Actualmente estoy cursando 3º de Ingeniería Informática en UAX, y simultáneamente a los estudios, estoy trabajando como Frontend Developer en Telefónica,
-        en concreto en el departamento de CDO, en un proyecto de desarrollo de Living Apps, estas son las apps que corrent en las Smart TVs de Movistar
-        (como Netflix, Youtube, Ikea, Amazon...), en concreto en la parte visual de estas aplicaciones (usando tecnologías como React o PixiJS (una librería de Javascript
+        en concreto en el departamento de CDO, en un proyecto de desarrollo de Living Apps, estas son las apps que corren en las Smart TVs de Movistar
+        (como Netflix, Youtube, Ikea, Amazon...), en concreto en la parte visual de estas aplicaciones usando tecnologías como React o PixiJS (una librería de Javascript
         que implementa la API de WebGL para navegadores).
       </p>
       <p>
         Para más información en el mundo laboral puedes consultar mi <a href="https://www.linkedin.com/in/sergio-dacal-rodriguez/">Linkedin</a>
+      </p>
+      <p>
         O si prefieres cotillear sobre mis aficciones por la escalada y el kitesurf también puedes echar un ojo a mi perfil de <a href="https://www.instagram.com/dacalite/">Instagram</a>
       </p>
     </section>
